# SkyRage

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.bat  build.sh  build_docker.sh  install.bat  install.sh  vcpkg.json
.github/workflows/: release.yml
include/Components/: Background.h  EnemySpawner.h  PlayerCar.h  PlayerPlane.h
include/Core/: EventManager.h  FontManager.h  IState.h  SoundManager.h  StateID.h  StateManager.h  TextureManager.h  WindowManager.h
include/States/: GameOverState.h  HighScoresState.h  HowToPlayState.h  MenuState.h  PauseState.h  PlayState.h  SettingsState.h  WinState.h
include/Util/: Path.h
src/Components/: Background.cpp  EnemySpawner.cpp  PlayerCar.cpp  PlayerPlane.cpp
src/Core/: EventManager.cpp  FontManager.cpp  SoundManager.cpp  TextureManager.cpp  WindowManager.cpp
src/States/: GameOverState.cpp  HighScoresState.cpp  MenuState.cpp  PauseState.cpp  PlayState.cpp  SettingsState.cpp  WinState.cpp
